# pathsearch

./: .flake8  .pre-commit-config.yaml  README.rst  pathsearch.py  pyproject.toml
.github/workflows/: format.yaml  lint.yaml  test.yaml
test/: test_env_var.py  test_get_pathext.py  test_get_paths.py  test_main.py  test_parser.py  test_verbose_print.py
