[tool.poetry]
name = "pathsearch"
version = "0.1.0"
description = "script to search paths for files"
authors = ["mrlegohead0x45 <mrlegohead0x45@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
mypy = "^0.942"

[tool.poetry.scripts]
pathsearch = "pathsearch:real_main"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
